--- a/styles.css
+++ b/styles.css
@@ -58,18 +58,14 @@ html, body {
 
 img {
     display: block;
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
-    object-position: center;
+    width: 100%;  /* Make the image fit the width of the screen */
+    height: 100%;  /* Make the image fit the height of the screen */
+    object-fit: cover; /* Ensure the image covers the screen without stretching */
+    object-position: center; /* Center the image */
 }
 
-.present-1 {
+.present {
     position: absolute;
-    top: 15%;
-    left: 48%;
-    width: 90px;
-    height: 90px;
     border: 4px solid #fff;
     background: rgba(0, 0, 0, 0.5);
     display: flex;
@@ -80,6 +76,13 @@ img {
     text-align: center;
     animation: blink 1.5s infinite; /* Add blinking effect */
     border-radius: 10px;
+}
+
+.present-1 {
+    top: 0%;
+    left: 47.5%;
+    width: 90px;
+    height: 80px;
 }
 
 @keyframes blink {
