--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,10 @@ img {
     object-position: center; /* Center the image */
 }
 
+#present-1-picture {
+    display: none; /* Hides the image */
+}
+
 .present {
     position: absolute;
     border: 4px solid #fff;
@@ -74,7 +78,7 @@ img {
     color: white;
     font-size: 24px;
     text-align: center;
-    animation: blink 1.5s infinite; /* Add blinking effect */
+    animation: blink 2s infinite;
     border-radius: 10px;
 }
 
@@ -83,6 +87,13 @@ img {
     left: 47.5%;
     width: 90px;
     height: 80px;
+}
+
+.present-2 {
+    top: 9.5%;
+    left: 47%;
+    width: 90px;
+    height: 55px;
 }
 
 @keyframes blink {
