--- a/styles.css
+++ b/styles.css
@@ -64,11 +64,11 @@ img {
     object-position: center; /* Center the image */
 }
 
-#present-1-picture {
-    display: none; /* Hides the image */
+.present-picture {
+    display: none;
 }
 
-.present {
+.present-button {
     position: absolute;
     border: 4px solid #fff;
     background: rgba(0, 0, 0, 0.5);
@@ -82,18 +82,18 @@ img {
     border-radius: 10px;
 }
 
-.present-1 {
-    top: 0%;
-    left: 47.5%;
+#present-1-button {
+    top: 10%;
+    left: 47.8%;
     width: 90px;
     height: 80px;
 }
 
-.present-2 {
-    top: 9.5%;
-    left: 47%;
-    width: 90px;
-    height: 55px;
+#present-2-button {
+    top: 17.7%;
+    left: 47.3%;
+    width: 110px;
+    height: 60px;
 }
 
 @keyframes blink {
