--- a/styles.css
+++ b/styles.css
@@ -109,5 +109,23 @@ img {
 }
 
 .highlight-overlay:hover {
-    cursor: pointer; /* Change cursor on hover */
+    cursor: pointer;
+}
+
+#skip-button {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    background-color: black;
+    color: white;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    transform: translateX(-50%);
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
+#skip-button:hover {
+    color: black;
 }
