--- a/styles.css
+++ b/styles.css
@@ -96,6 +96,48 @@ img {
     height: 60px;
 }
 
+#present-3-button {
+    top: 19%;
+    left: 46%;
+    width: 155px;
+    height: 130px;
+}
+
+#present-4-button {
+    top: 24%;
+    left: 46%;
+    width: 155px;
+    height: 130px;
+}
+
+#present-5-button {
+    top: 30%;
+    left: 46%;
+    width: 155px;
+    height: 130px;
+}
+
+#present-6-button {
+    top: 35%;
+    left: 46%;
+    width: 155px;
+    height: 130px;
+}
+
+#present-7-button {
+    top: 40%;
+    left: 46%;
+    width: 155px;
+    height: 130px;
+}
+
+#present-8-button {
+    top: 45%;
+    left: 46%;
+    width: 155px;
+    height: 130px;
+}
+
 @keyframes blink {
     0% {
         opacity: 1;
