--- a/styles.css
+++ b/styles.css
@@ -104,38 +104,38 @@ img {
 }
 
 #present-4-button {
-    top: 24%;
-    left: 46%;
-    width: 155px;
-    height: 130px;
+    top: 32%;
+    left: 42.8%;
+    width: 135px;
+    height: 80px;
 }
 
 #present-5-button {
-    top: 30%;
-    left: 46%;
-    width: 155px;
-    height: 130px;
+    top: 32%;
+    left: 51.3%;
+    width: 133px;
+    height: 90px;
 }
 
 #present-6-button {
-    top: 35%;
-    left: 46%;
-    width: 155px;
-    height: 130px;
+    top: 38%;
+    left: 42.1%;
+    width: 136px;
+    height: 110px;
 }
 
 #present-7-button {
-    top: 40%;
-    left: 46%;
-    width: 155px;
-    height: 130px;
+    top: 48%;
+    left: 42.1%;
+    width: 135px;
+    height: 95px;
 }
 
 #present-8-button {
-    top: 45%;
-    left: 46%;
-    width: 155px;
-    height: 130px;
+    top: 47.3%;
+    left: 37.5%;
+    width: 85px;
+    height: 93px;
 }
 
 @keyframes blink {
@@ -185,16 +185,32 @@ img {
     z-index: 1000;
 }
 
+.border-container {
+    background-image: url("images/gold.png");
+    background-repeat: repeat;
+    padding: 10px;
+    border-radius: 20px;
+}
+
 .popup-content {
     background-color: white;
-    padding: 20px;
-    border-radius: 10px;
+    padding: 30px;
+    border-radius: 20px;
     text-align: left;
     width: 500px;
     font-size: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+#question-text {
+    font-size: 26px;
+}
+
+#feedback-container {
+    display: none;
+    margin-top: 25px;
 }
 
 .submit-answer {
