--- a/styles.css
+++ b/styles.css
@@ -186,7 +186,7 @@ img {
 }
 
 .border-container {
-    background-image: url("./images/gold.png");
+    background-image: url("https://media.githubusercontent.com/media/elfcrimes/elfcrimes.github.io/refs/heads/main/images/gold.png");
     background-repeat: repeat;
     padding: 10px;
     border-radius: 20px;
